k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: check-duplicate-svc
spec:
  type : NodePort
  ports:
    - port: 80
      targetPort: 8085
  selector:
    app: check-duplicate-service-app
