k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ecmdev.check-duplicate.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: check-duplicate-svc
                port:
                  number: 80
